--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="header">
+    <div class="header">
         <div class="logo"><h1>Gajigo</h1></div>
+
+        <div class="menu-login">
+            <a href="#">registrar</a>
+            <a href="#">entrar</a>
+        </div>
 
     </div>
 
@@ -14,7 +19,7 @@
     </div>
 
     <div id="footer">
-        
+
     </div>
 </body>
 </html>
