--- a/index.html
+++ b/index.html
@@ -21,5 +21,22 @@
     <div id="footer">
 
     </div>
+
+    <footer>
+        <div class="container-footer">
+            <div>
+                <p>Funcionalidades</p>
+                <p class="grey-text">Portal de Inscrição</p>
+                <p class="grey-text">Auto Check-in/out</p>
+                <p class="grey-text">Cartão de Visitas</p>
+            </div>
+            <div>
+                <p>Empresa</p>
+                <p class="grey-text">Sobre</p>
+                <p class="grey-text">Público Alvo</p>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
