--- a/index.html
+++ b/index.html
@@ -5,38 +5,22 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"><h1>Gajigo</h1></div>
-
-        <div class="menu-login">
-            <a href="#">registrar</a>
-            <a href="#">entrar</a>
-        </div>
-
+        <a href="#default" class="logo">Gajigo</a>
+        <div class="header-right">
+        <a class="active" href="#sobre">Sobre</a>
+        <a href="#funcionalidades">Funcionalidades</a>
+        <a href="#publico">Para quem eh</a>
+        <a href="#contato">Contato</a>
+      </div>
     </div>
-
-    <div id="main">
-
+    
+    <div style="padding-left:20px">
+      <h1>CRIE, ORGANIZE E GERENCIE<br/>
+      O SEU EVENTO DE FORMA<br/>
+      INTELIGENTE.</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
+      sed do eiusmod tempor incididunt...</p>
     </div>
-
-    <div id="footer">
-
-    </div>
-
-    <footer>
-        <div class="container-footer">
-            <div>
-                <p>Funcionalidades</p>
-                <p class="grey-text">Portal de Inscrição</p>
-                <p class="grey-text">Auto Check-in/out</p>
-                <p class="grey-text">Cartão de Visitas</p>
-            </div>
-            <div>
-                <p>Empresa</p>
-                <p class="grey-text">Sobre</p>
-                <p class="grey-text">Público Alvo</p>
-            </div>
-        </div>
-    </footer>
-</body>
-
+    
+    </body>
 </html>
