--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
     </div>
 
     <footer>
-        <div class="container-footer">
-            <div>
-                <p>Funcionalidades</p>
-                <p class="grey-text">Portal de Inscrição</p>
-                <p class="grey-text">Auto Check-in/out</p>
-                <p class="grey-text">Cartão de Visitas</p>
+        <div class="footer-items">
+            <div class="container-footer">
+                <div>
+                    <p>Funcionalidades</p>
+                    <p class="grey-text">Portal de Inscrição</p>
+                    <p class="grey-text">Auto Check-in/out</p>
+                    <p class="grey-text">Cartão de Visitas</p>
+                </div>
+                <div>
+                    <p>Empresa</p>
+                    <p class="grey-text">Sobre</p>
+                    <p class="grey-text">Público Alvo</p>
+                </div>
             </div>
-            <div>
-                <p>Empresa</p>
-                <p class="grey-text">Sobre</p>
-                <p class="grey-text">Público Alvo</p>
-            </div>
+        </div>
+        <div class="copyright">
+            <p class="grey-text">2021 Gajigo todos os direitos reservados</p>
         </div>
     </footer>
 </body>
