--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
       sed do eiusmod tempor incididunt...</p>
     </div>
+
+    <div class="funcionalidades">
+        <h1>Eventos Inteligentes</h1>
+        <h2>Funcionalidades Incriveis para seu evento</h2>
+        <p>Somos uma plataforma de controle de eventos<br/>
+        academicos, corporativos ou culturais.<br/>
+        Te ajudamos a gerenciar seu evento de forma<br>
+        inteligete, rapida, e sem dinamica.</p>
+    </div>
     
     </body>
 </html>
