--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="header-right">
         <a class="active" href="#sobre">Sobre</a>
         <a href="#funcionalidades">Funcionalidades</a>
-        <a href="#publico">Para quem eh</a>
+        <a href="#publico">Para quem é</a>
         <a href="#contato">Contato</a>
       </div>
     </div>
@@ -20,6 +20,12 @@
       INTELIGENTE.</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
       sed do eiusmod tempor incididunt...</p>
+      
+        <form action="/action_page.php">
+        <input type="text" placeholder="Digite seu e-mail para saber mais!" name="mail" required>
+        <input type="submit" value="Inscrever-se">
+        </form>
+
     </div>
 
     <footer>
