arruma erros de formato

--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
     <title>Gajigo | Crie, Gerencie e Engaje seu evento!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="header">
-        <a href="#default" class="logo">Gajigo</a>
-        <div class="header-right">
-        <a class="active" href="#sobre">Sobre</a>
-        <a href="#funcionalidades">Funcionalidades</a>
-        <a href="#publico">Para quem é</a>
-        <a href="#contato">Contato</a>
-      </div>
-    </div>
+<html>
+    <body>
+        <div class="header">
+            <a href="#default" class="logo">Gajigo</a>
+            <div class="header-right">
+            <a class="active" href="#sobre">Sobre</a>
+            <a href="#funcionalidades">Funcionalidades</a>
+            <a href="#publico">Para quem é</a>
+            <a href="#contato">Contato</a>
+          </div>
+        </div>
 
     <div style="padding-left:20px">
-      <h1>CRIE, ORGANIZE E GERENCIE<br/>
-      O SEU EVENTO DE FORMA<br/>
-      INTELIGENTE.</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
-      sed do eiusmod tempor incididunt...</p>
-      
+        <h1>CRIE, ORGANIZE E GERENCIE<br/>
+          O SEU EVENTO DE FORMA<br/>
+          INTELIGENTE.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
+          sed do eiusmod tempor incididunt...</p>
         <form action="/action_page.php">
-        <input type="text" placeholder="Digite seu e-mail para saber mais!" name="mail" required>
-        <input type="submit" value="Inscrever-se">
+            <input type="text" placeholder="Digite seu e-mail para saber mais!" name="mail" required>
+            <input type="submit" value="Inscrever-se">
         </form>
 
     </div>
@@ -36,9 +36,7 @@
         Te ajudamos a gerenciar seu evento de forma<br>
         inteligete, rapida, e sem dinamica.</p>
     </div>
-    
-    </body>
-</html>
+
     <footer>
         <div class="footer-items">
             <div class="container-footer">
@@ -60,5 +58,4 @@
         </div>
     </footer>
 </body>
-
 </html>
