prepara para adicionar imagem de fundo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </div>
         </div>
 
-    <div style="padding-left:20px">
+    <div id="landing-main">
         <h1>CRIE, ORGANIZE E GERENCIE<br/>
           O SEU EVENTO DE FORMA<br/>
           INTELIGENTE.</h1>
