--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
             <a href="#funcionalidades">Funcionalidades</a>
             <a href="#publico">Para quem é</a>
             <a href="#contato">Contato</a>
-          </div>
+            </div>
         </div>
 
-    <div id="landing-main">
-        <h1>CRIE, ORGANIZE E GERENCIE<br/>
+    <div style="padding: 10rem;" id="landing-main">
+        <h1 id="texto-atrativo">CRIE, ORGANIZE E GERENCIE<br/>
           O SEU EVENTO DE FORMA<br/>
           INTELIGENTE.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/>
-          sed do eiusmod tempor incididunt...</p>
         <form action="/action_page.php">
             <input type="text" placeholder="Digite seu e-mail para saber mais!" name="mail" required>
             <input type="submit" value="Inscrever-se">
