Melhora visual do footer

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
     <title>Gajigo | Crie, Gerencie e Engaje seu evento!</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <html>
     <body>
@@ -25,7 +28,6 @@
         </form>
 
     </div>
-
     <div class="funcionalidades">
         <h1>Eventos Inteligentes</h1>
         <h2>Funcionalidades Incriveis para seu evento</h2>
@@ -34,21 +36,21 @@
         Te ajudamos a gerenciar seu evento de forma<br>
         inteligete, rapida, e sem dinamica.</p>
     </div>
-
     <footer>
         <div class="footer-items">
             <div class="container-footer">
                 <div>
-                    <p>Funcionalidades</p>
+                    <p><strong>Funcionalidades</strong></p>
                     <p class="grey-text">Portal de Inscrição</p>
                     <p class="grey-text">Auto Check-in/out</p>
                     <p class="grey-text">Cartão de Visitas</p>
                 </div>
-                <div>
-                    <p>Empresa</p>
+                <div style="padding-left: 2rem;">
+                    <p><strong>Empresa</strong></p>
                     <p class="grey-text">Sobre</p>
                     <p class="grey-text">Público Alvo</p>
                 </div>
+                <p class="grey-text logo"><strong>Gajigo</strong></p>
             </div>
         </div>
         <div class="copyright">
