--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html>
     <body>
         <div class="header">
-            <a href="#default" class="logo">Gajigo</a>
+            <a href="#landing-main" class="logo">Gajigo</a>
             <div class="header-right">
             <a class="active" href="#sobre">Sobre</a>
             <a href="#funcionalidades">Funcionalidades</a>
@@ -26,7 +26,7 @@
 
         </div>
 
-        <div class="funcionalidades">
+        <div id="funcionalidades" class="funcionalidades">
             <h1>Eventos Inteligentes</h1>
             <h2>Funcionalidades Incriveis para seu evento</h2>
             <p>Somos uma plataforma de controle de eventos<br/>
