adiciona links ao footer

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 <div class="container-footer">
                     <div>
                         <p><strong>Sobre</strong></p>
-                        <p class="grey-text">Portal de Inscrição</p>
-                        <p class="grey-text">Auto Check-in/out</p>
-                        <p class="grey-text">Cartão de Visitas</p>
+                        <a href="#" class="grey-text"><p>Portal de Inscrição</p></a>
+                        <a href="#" class="grey-text"><p>Auto Check-in/out</p></a>
+                        <a href="#" class="grey-text"><p>Cartão de Visitas</p></a>
                     </div>
                     <div style="padding-left: 2rem;">
                         <p><strong>Empresa</strong></p>
-                        <p class="grey-text">Sobre</p>
-                        <p class="grey-text">Público Alvo</p>
+                        <a href="#sobre" class="grey-text"><p>Sobre</p></a>
+                        <a href="#" class="grey-text"><p>Público Alvo</p></a>
                     </div>
                     <p class="grey-text logo"><strong>Gajigo</strong></p>
                 </div>
