--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             inteligete, rapida, e sem dinamica.</p>
         </div>
 
+        <div id="funcionalidades">
+            <h1>As funcionalidades que seu evento precisa</h1>
+        </div>
+
         <footer>
             <div class="footer-items">
                 <div class="container-footer">
