funcionalidades no html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
             inteligete, rapida, e sem dinamica.</p>
         </div>
 
+        <div id="funcionalidades">
+            <h1>Funcoes Inteligentes</h1>
+                <div class="funcli">
+                    <h1>Cartão de Visitas Virtual</h1>
+                    <p>Lorem Ipsun dolor sit amet...</p>
+                </div>
+                
+                <div class="funcli">
+                    <h1>Cartão de Visitas Virtual</h1>
+                    <p>Lorem Ipsun dolor sit amet...</p>
+                </div>
+
+                <div class="funcli">
+                    <h1>Cartão de Visitas Virtual</h1>
+                    <p>Lorem Ipsun dolor sit amet...</p>
+                </div>
+        </div>
+
         <footer>
             <div class="footer-items">
                 <div class="container-footer">
