adiciona publico alvo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <h1>As funcionalidades que seu evento precisa</h1>
         </div>
 
+        <div id="publico-alvo">
+            <h1>Para eventos em todos os locais e tamanhos</h1>
+        </div>
+
         <footer>
             <div class="footer-items">
                 <div class="container-footer">
