--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             Te ajudamos a gerenciar seu evento de forma<br>
             inteligete, rapida, e sem dinamica.</p>
             <div>
-                <p>Equipe</p>
-                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="100", height="100">
-                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="100", height="100">
-                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="100", height="100">
-                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="100", height="100">
+                <p>Equipe:</p>
+                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="125", height="125">
+                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="125", height="125">
+                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="125", height="125">
+                <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg", alt="", width="125", height="125">
 
             </div>
         </div>
