--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
         </div>
 
         <div id="funcionalidades">
-            <h1>Funcoes Inteligentes</h1>
+            <h1>As funcionalidades que seu evento precisa</h1>
                 <div class="funcli">
                     <h1>Cartão de Visitas Virtual</h1>
                     <p>Lorem Ipsun dolor sit amet...</p>
                 </div>
                 
                 <div class="funcli">
-                    <h1>Cartão de Visitas Virtual</h1>
+                    <h1>Check-in Contactless</h1>
                     <p>Lorem Ipsun dolor sit amet...</p>
                 </div>
 
                 <div class="funcli">
-                    <h1>Cartão de Visitas Virtual</h1>
+                    <h1>Avalie seu palestrante</h1>
                     <p>Lorem Ipsun dolor sit amet...</p>
                 </div>
         </div>
