--- a/index.html
+++ b/index.html
@@ -49,20 +49,33 @@
         </div>
         <div id="funcionalidades">
             <h1>As funcionalidades que seu evento precisa</h1>
-                <div class="funcli">
-                    <h1>Cartão de Visitas Virtual</h1>
-                    <p>Lorem Ipsun dolor sit amet...</p>
+            
+            <div class="func-col">
+                <div class="func-content">
+                    <h2>Cartão de Visitas Virtual</h2>
+                    <img src="https://s2.glbimg.com/blZtz_QMEBw3SywCU2_v64ibLDI=/0x0:1000x741/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/B/r/c6T6HISqqARc3PSz1fFw/cartao-visita-digital.jpg" 
+                    width="400px" height="300px">
+                    <p>lorem ipsun dolor sit amet</p>
                 </div>
+            </div>
+            <div class="func-col">
+                <div class="func-content">
+                    <h2>Check-in Contactless</h2>
+                    <img src="https://s2.glbimg.com/blZtz_QMEBw3SywCU2_v64ibLDI=/0x0:1000x741/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/B/r/c6T6HISqqARc3PSz1fFw/cartao-visita-digital.jpg" 
+                    width="400px" height="300px">
+                    <p>lorem ipsun dolor sit amet</p>
+                </div>
+            </div>
+            <div class="func-col">
+                <div class="func-content">
+                    <h2>Avalie Seu Palestrante</h2>
+                    <img src="https://s2.glbimg.com/blZtz_QMEBw3SywCU2_v64ibLDI=/0x0:1000x741/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/B/r/c6T6HISqqARc3PSz1fFw/cartao-visita-digital.jpg" 
+                    width="400px" height="300px">
+                    <p>lorem ipsun dolor sit amet</p>
+                </div>
+            </div>
 
-                <div class="funcli">
-                    <h1>Check-in Contactless</h1>
-                    <p>Lorem Ipsun dolor sit amet...</p>
-                </div>
 
-                <div class="funcli">
-                    <h1>Avalie seu palestrante</h1>
-                    <p>Lorem Ipsun dolor sit amet...</p>
-                </div>
         </div>
 
         <footer>
