adiciona ancora publico-alvo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header-right">
             <a class="active" href="#sobre">Sobre</a>
             <a href="#funcionalidades">Funcionalidades</a>
-            <a href="#publico">Para quem é</a>
+            <a href="#publico-alvo">Para quem é</a>
             <a href="#contato">Contato</a>
             </div>
         </div>
