tirei a classe active do menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header">
             <a href="#landing-main" class="logo">Gajigo</a>
             <div class="header-right">
-            <a class="active" href="#sobre">Sobre</a>
+            <a href="#sobre">Sobre</a>
             <a href="#funcionalidades">Funcionalidades</a>
             <a href="#publico-alvo">Para quem é</a>
             <a href="#contato">Contato</a>
