melhora responsividade do footer

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <a href="#" class="grey-text"><p>Auto Check-in/out</p></a>
                         <a href="#" class="grey-text"><p>Cartão de Visitas</p></a>
                     </div>
-                    <div style="padding-left: 2rem;">
+                    <div>
                         <p><strong>Empresa</strong></p>
                         <a href="#sobre" class="grey-text"><p>Sobre</p></a>
                         <a href="#" class="grey-text"><p>Público Alvo</p></a>
@@ -111,9 +111,9 @@
                     <p class="grey-text logo"><strong>Gajigo</strong></p>
                 </div>
             </div>
-        <div class="copyright">
-            <p class="grey-text">2021 Gajigo todos os direitos reservados</p>
-        </div>
-    </footer>
-</body>
+            <div class="copyright">
+                <p class="grey-text">2021 Gajigo todos os direitos reservados</p>
+            </div>
+        </footer>
+    </body>
 </html>
