melhorando responsividade de 'Equipe'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             inteligete, rapida, e sem dinamica.</p>
             <div>
                 <p>Equipe:</p>
-                <div class="grid_avatar">
+                <div class="grid-imagens-publico">
                     <div class="avatar">
                         <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg" alt="">
                         <p>Abel Chang</p>
