--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     <div>
                         <p><strong>Empresa</strong></p>
                         <a href="#sobre" class="grey-text"><p>Sobre</p></a>
-                        <a href="#" class="grey-text"><p>Público Alvo</p></a>
+                        <a href="#funcionalidades" class="grey-text"><p>Funcionalidades</p></a>
+                        <a href="#publico-alvo" class="grey-text"><p>Público Alvo</p></a>
                     </div>
-                    <p class="grey-text logo"><strong>Gajigo</strong></p>
                 </div>
             </div>
             <div class="copyright">
