--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             </div>
         </div>
 
-        <div style="padding: 10rem;" id="landing-main"> <h1 id="texto-atrativo">CRIE, ORGANIZE E GERENCIE<br/>
+        <div id="landing-main">
+            <h1 id="texto-atrativo">CRIE, ORGANIZE E GERENCIE<br/>
               O SEU EVENTO DE FORMA<br/>
-              INTELIGENTE.</h1>
+              INTELIGENTE.
+            </h1>
             <form action="/action_page.php">
                 <input type="text" placeholder="Digite seu e-mail para saber mais!" name="mail" required>
                 <input type="submit" value="Inscrever-se">
