--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <p>Somos uma plataforma de controle de eventos<br/>
             academicos, corporativos ou culturais.<br/>
             Te ajudamos a gerenciar seu evento de forma<br>
-            inteligete, rapida, e sem dinamica.</p>
+            inteligente, rapida, e sem dinamica.</p>
             <div>
                 <p>Equipe:</p>
-                <div class="grid-imagens-publico">
+                <div id="equipe" class="grid-imagens-publico">
                     <div class="avatar">
                         <img src="https://img.freepik.com/vetores-gratis/avatar-de-personagem-de-empresario-isolado_24877-60111.jpg?size=338&ext=jpg" alt="">
                         <p>Abel Chang</p>
