erros de portugues

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <h1>Eventos Inteligentes</h1>
             <h2>Funcionalidades Incriveis para seu evento</h2>
             <p>Somos uma plataforma de controle de eventos<br/>
-            academicos, corporativos ou culturais.<br/>
-            Te ajudamos a gerenciar seu evento de forma<br>
-            inteligente, rapida, e sem dinamica.</p>
+            acadêmicos, corporativos ou culturais.<br/>
+            Ajudamos a gerenciar seu evento de forma<br>
+            inteligente, rápida, e dinâmica.</p>
             <div>
                 <p>Equipe:</p>
                 <div id="equipe" class="grid-imagens-publico">
