menu contato removido, pra quem eh > publico alvo

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             <div class="header-right">
             <a href="#sobre">Sobre</a>
             <a href="#funcionalidades">Funcionalidades</a>
-            <a href="#publico-alvo">Para quem é</a>
-            <a href="#contato">Contato</a>
+            <a href="#publico-alvo">Publico Alvo</a>
             </div>
         </div>
 
