--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p class="grey-text">2021 Gajigo todos os direitos reservados</p>
+                <p class="grey-text">© 2021 Gajigo todos os direitos reservados</p>
             </div>
         </footer>
     </body>
