--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     </head>
 
     <body>
+        <header class="mainHeader">
+            <div class="headerLogo">
+                <a href="#">Gajigo</a>
+            </div>
+        </header>
     </body>
 </html>
