adiciona ancoras e animacoes ao menu

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
     <body>
         <header class="mainHeader">
-            <div class="headerLogo">
-                <a href="#">Gajigo</a>
+            <a href="#" class="headerLogo"><strong>Gajigo</strong></a>
+            <div class="headerAnchors">
+                <a href="#sobre">Sobre</a>
+                <a href="#funcionalidades">Funcionalidades</a>
+                <a href="#publicoAlvo">Publico Alvo</a>
             </div>
         </header>
+        <div class="contents">
+        </div>
     </body>
 </html>
