--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             </div>
         </header>
         <div class="contents">
+            <div class="landing">
+                <p>
+                    CRIE, ORGANIZE E GERENCIE
+                    O SEU EVENTO DE FORMA
+                    INTELIGENTE.
+                </p>
+            </div>
         </div>
     </body>
 </html>
