add form to landing

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     O SEU EVENTO DE FORMA
                     INTELIGENTE.
                 </p>
+                <form action="/action_page.php">
+                    <input type="text" placeholder="Digite seu e-mail para saber mais!" name="email" required>
+                    <input type="submit" class="botao" value="Inscrever-se">
+                </form>
             </div>
         </div>
     </body>
