melhora visual landing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </p>
                 <form action="/action_page.php">
                     <input type="text" placeholder="Digite seu e-mail para saber mais!" name="email" required>
-                    <input type="submit" class="botao" value="Inscrever-se">
+                    <input type="submit" class="button" value="Inscrever-se">
                 </form>
             </div>
         </div>
