make landing main take up 100% of height

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <body>
         <header class="mainHeader">
             <a href="#" class="headerLogo"><strong>Gajigo</strong></a>
+
             <div class="headerAnchors">
                 <a href="#sobre">Sobre</a>
                 <a href="#funcionalidades">Funcionalidades</a>
                 <a href="#publicoAlvo">Publico Alvo</a>
             </div>
         </header>
+
         <div class="contents">
             <div class="landing">
                 <p>
@@ -23,10 +25,14 @@
                     O SEU EVENTO DE FORMA
                     INTELIGENTE.
                 </p>
+
                 <form action="/action_page.php">
                     <input type="text" placeholder="Digite seu e-mail para saber mais!" name="email" required>
                     <input type="submit" class="button" value="Inscrever-se">
                 </form>
+            </div>
+            <div>
+                test
             </div>
         </div>
     </body>
