add secao sobre

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     </head>
 
     <body>
@@ -21,8 +22,8 @@
         <div class="contents">
             <div class="landing">
                 <p>
-                    CRIE, ORGANIZE E GERENCIE
-                    O SEU EVENTO DE FORMA
+                    CRIE, ORGANIZE E GERENCIE<br>
+                    SEU EVENTO DE FORMA<br>
                     INTELIGENTE.
                 </p>
 
@@ -31,8 +32,40 @@
                     <input type="submit" class="button" value="Inscrever-se">
                 </form>
             </div>
-            <div>
-                test
+
+            <div id="sobre" class="sobre">
+                <div class="info">
+                    <span class="material-icons-outlined md-48">done</span>
+                    <h1>Assinatura Rapida, Contactless</h1>
+                    <p>
+                        É possível assinar uma lista de<br>
+                        presença sem se quer tocar no papel.<br>
+                        Instantâneo.
+                    </p>
+                </div>
+
+                <div class="info">
+                    <span class="material-icons-outlined md-48">info</span>
+                    <h1>Informações em um so lugar</h1>
+                    <p>
+                        Armazenamos os dados mais<br>
+                        importantes para quem<br>
+                        participa do seu evento. Hora,<br>
+                        Sala, Descrição e mais para<br>
+                        cada evento ou palestra.
+                    </p>
+                </div>
+
+                <div class="info">
+                    <span class="material-icons-outlined md-48">timeline</span>
+                    <h1>Eficiência nas Palestras</h1>
+                    <p>
+                        Participantes podem mandar<br>
+                        suas duvidas pelo aplicativo,<br>
+                        facilitando e agilizando a vida<br>
+                        do palestrante.
+                    </p>
+                </div>
             </div>
         </div>
     </body>
