--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
                     </p>
                 </div>
             </div>
+
+            <footer class="mainFooter">
+                <div class="footerSections">
+                    <div class="section">
+                        <p><strong>Sobre</strong></p>
+                        <a href="#">Portal de Inscrição</a>
+                        <a href="#">Auto Check-in/out</a>
+                        <a href="#">Cartão de Visitas</a>
+                    </div>
+
+                    <div class="section">
+                        <p><strong>Empresa</strong></p>
+                        <a href="#sobre" class="grey-text"><p>Sobre</p></a>
+                        <a href="#funcionalidades" class="grey-text"><p>Funcionalidades</p></a>
+                        <a href="#publicoAlvo" class="grey-text"><p>Público Alvo</p></a>
+                    </div>
+                </div>
+                <p class="copyright">© 2021 Gajigo todos os direitos reservados</p>
+            </footer>
         </div>
     </body>
 </html>
