--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header class="mainHeader">
-            <a href="#" class="headerLogo"><strong>Gajigo</strong></a>
+            <a href="#landing" class="headerLogo"><strong>Gajigo</strong></a>
 
             <div class="headerAnchors">
                 <a href="#sobre">Sobre</a>
@@ -20,7 +20,7 @@
         </header>
 
         <div class="contents">
-            <div class="landing">
+            <div id="landing">
                 <p>
                     CRIE, ORGANIZE E GERENCIE<br>
                     SEU EVENTO DE FORMA<br>
@@ -33,7 +33,7 @@
                 </form>
             </div>
 
-            <div id="sobre" class="sobre">
+            <div id="sobre">
                 <div class="info">
                     <span class="material-icons-outlined md-48">done</span>
                     <h1>Assinatura Rapida, Contactless</h1>
@@ -68,13 +68,44 @@
                 </div>
             </div>
 
+            <div id="funcionalidades">
+                <div class="funcionalidade">
+                    <div class="mockupInfo">
+                        <h1>Cartão de Visitas Virtual</h1>
+                        <p>
+                            Compartilhe suas informações com facilidade.<br>
+                            usuarios, palestrantes e organizadores podem<br>
+                            utilizar do aplicativo para acessar e<br>
+                            trocar informações de contato entre si.<br>
+                        </p>
+                    </div>
+
+                    <img src="cartao_visitas.png" alt="Celular mostrando tela de Cartão de Visitas Virtual">
+                </div>
+
+                <div class="funcionalidade">
+                    <img src="checkin.png" alt="Celular mostrando tela de check-in">
+                    <div class="mockupInfo">
+                        <h1>Check-in e Check-out</h1>
+                        <p>
+                            Gajigo ajuda você a controlar e manter a <br>
+                            lista de participantes de seu evento. Com nosso<br>
+                            aplicativo gestor, nunca foi tão facil e rapido<br>
+                            saber quem foi ou não para uma palestra.<br>
+                            <br>
+                            Jogue fora o papel e caneta, use Gajigo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <footer class="mainFooter">
                 <div class="footerSections">
                     <div class="section">
                         <p><strong>Empresa</strong></p>
-                        <a href="#sobre" class="grey-text"><p>Sobre</p></a>
-                        <a href="#funcionalidades" class="grey-text"><p>Funcionalidades</p></a>
-                        <a href="#publicoAlvo" class="grey-text"><p>Público Alvo</p></a>
+                        <a href="#sobre" class="grey-text">Sobre</a>
+                        <a href="#funcionalidades" class="grey-text">Funcionalidades</a>
+                        <a href="#publicoAlvo" class="grey-text">Público Alvo</a>
                     </div>
                 </div>
                 <p class="copyright">© 2021 Gajigo todos os direitos reservados</p>
