refactor: Altera fonte e medidas do tamanho da fonte

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -38,8 +41,8 @@
                     <span class="material-icons-outlined md-48">done</span>
                     <h1>Assinatura Rapida, Contactless</h1>
                     <p>
-                        É possível assinar uma lista de<br>
-                        presença sem se quer tocar no papel.<br>
+                        É possível assinar uma lista de
+                        presença sem se quer tocar no papel.
                         Instantâneo.
                     </p>
                 </div>
@@ -48,10 +51,10 @@
                     <span class="material-icons-outlined md-48">info</span>
                     <h1>Informações em um so lugar</h1>
                     <p>
-                        Armazenamos os dados mais<br>
-                        importantes para quem<br>
-                        participa do seu evento. Hora,<br>
-                        Sala, Descrição e mais para<br>
+                        Armazenamos os dados mais
+                        importantes para quem
+                        participa do seu evento. Hora,
+                        Sala, Descrição e mais para
                         cada evento ou palestra.
                     </p>
                 </div>
@@ -60,9 +63,9 @@
                     <span class="material-icons-outlined md-48">timeline</span>
                     <h1>Eficiência nas Palestras</h1>
                     <p>
-                        Participantes podem mandar<br>
-                        suas duvidas pelo aplicativo,<br>
-                        facilitando e agilizando a vida<br>
+                        Participantes podem mandar
+                        suas duvidas pelo aplicativo,
+                        facilitando e agilizando a vida
                         do palestrante.
                     </p>
                 </div>
@@ -73,10 +76,10 @@
                     <div class="mockupInfo">
                         <h1>Cartão de Visitas Virtual</h1>
                         <p>
-                            Compartilhe suas informações com facilidade.<br>
-                            usuarios, palestrantes e organizadores podem<br>
-                            utilizar do aplicativo para acessar e<br>
-                            trocar informações de contato entre si.<br>
+                            Compartilhe suas informações com facilidade.
+                            usuarios, palestrantes e organizadores podem
+                            utilizar do aplicativo para acessar e
+                            trocar informações de contato entre si.
                         </p>
                     </div>
 
