fix: Corrige responsividade

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section class="contents">
             <div id="landing">
                 <p>
-                    CRIE, ORGANIZE E GERENCIE<br>
-                    SEU EVENTO DE FORMA<br>
+                    CRIE, ORGANIZE E GERENCIE
+                    SEU EVENTO DE FORMA
                     INTELIGENTE.
                 </p>
 
