fix; Corrige responsividade das seções do protótipo

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <h1>Cartão de Visitas Virtual</h1>
                         <p>
                             Compartilhe suas informações com facilidade.
-                            usuarios, palestrantes e organizadores podem
+                            Usuarios, palestrantes e organizadores podem
                             utilizar do aplicativo para acessar e
                             trocar informações de contato entre si.
                         </p>
@@ -91,13 +91,12 @@
                     <div class="mockupInfo">
                         <h1>Check-in e Check-out</h1>
                         <p>
-                            Gajigo ajuda você a controlar e manter a <br>
-                            lista de participantes de seu evento. Com nosso<br>
-                            aplicativo gestor, nunca foi tão facil e rapido<br>
-                            saber quem foi ou não para uma palestra.<br>
-                            <br>
-                            Jogue fora o papel e caneta, use Gajigo.
+                            Gajigo ajuda você a controlar e manter a
+                            lista de participantes de seu evento. Com nosso
+                            aplicativo gestor, nunca foi tão facil e rapido
+                            saber quem foi ou não para uma palestra.
                         </p>
+                        <p>Jogue fora o papel e caneta, use Gajigo.</p>
                     </div>
                 </div>
             </div>
